--- a/package.json
+++ b/package.json
@@ -2,11 +2,35 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "chalk": "^5.1.2",
+    "connect-session-sequelize": "^7.1.5",
     "dotenv": "^16.0.3",
     "errorhandler": "^1.5.1",
     "express": "^4.18.2",
+    "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.25.5"
-  }
+  },
+  "scripts": {
+    "start": "node server.js",
+    "seed": "node seeds/seed.js"
+  },
+  "name": "yard-bazaar",
+  "version": "1.0.0",
+  "main": "server.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RuxinQu/yard-bazaar.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/RuxinQu/yard-bazaar/issues"
+  },
+  "homepage": "https://github.com/RuxinQu/yard-bazaar#readme",
+  "description": ""
 }
