--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "express-session": "^1.17.3",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.25.5"
   },
   "scripts": {
@@ -31,5 +33,8 @@
     "url": "https://github.com/RuxinQu/yard-bazaar/issues"
   },
   "homepage": "https://github.com/RuxinQu/yard-bazaar#readme",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "eslint": "^8.27.0"
+  }
 }
